--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,19 +24,27 @@
   <ul>
     <% if user_signed_in? %>
       <li><%= link_to "Available Books", books_path %></li>
-      <li><%= link_to "Request Book", request_book_path %></li>
       <li><%= link_to "My Books", my_books_path %></li>
+      <li><%= link_to "Request Book", request_book_path %></li>
 
-      <!-- Profile Dropdown -->
-      <li class="profile-dropdown">
-        <div class="profile-toggle">
-          <div class="profile-pic-placeholder profile-toggle"></div>
-        </div>
-        <ul class="dropdown-menu">
-          <li><%= link_to "View Profile", profile_path %></li>
-<li><%= button_to "Log Out", destroy_user_session_path, method: :delete, form: { class: "logout-button" } %></li>
-        </ul>
-      </li>
+ <!-- Profile Dropdown -->
+<div class="profile-dropdown">
+  <div class="profile-toggle">
+    <% if current_user.present? %>
+      <% initials = current_user.name.split.map { |n| n[0] }.join.upcase %>
+      <div class="profile-initials profile-toggle"><%= initials.presence || "U" %></div>
+    <% else %>
+      <div class="profile-pic-placeholder profile-toggle"></div>
+    <% end %>
+  </div>
+  
+  <!-- Dropdown Menu -->
+  <div class="dropdown-menu">
+    <a href="<%= profile_path %>" class="dropdown-item">View Profile</a>
+    <%= button_to "Log Out", destroy_user_session_path, method: :delete, form: { class: "logout-button dropdown-item" } %>
+  </div>
+</div>
+
     <% else %>
       <li><%= link_to "Log In", new_user_session_path %></li>
       <li><%= link_to "Sign Up", new_user_registration_path %></li>
